# brane

./: .buildinfo  .gitignore  MANIFEST.in  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree  modules.doctree
.doctrees/api/: brane.config.doctree  brane.core.doctree  brane.doctree  brane.libs.doctree  brane.libs.hooks.doctree  modules.doctree
.doctrees/examples/: modules.doctree  package_overview_tour.doctree
.doctrees/introduction/: introduction.doctree
_sources/: index.rst.txt
_sources/api/: brane.config.rst.txt  brane.libs.hooks.rst.txt  brane.libs.rst.txt
_sources/examples/: package_overview_tour.ipynb.txt
_sources/introduction/: introduction.md.txt
_static/: documentation_options.js
api/: brane.config.html  brane.core.html  brane.html  brane.libs.hooks.html  brane.libs.html  modules.html
brane/: __init__.py  typing.py
brane/config/: __init__.py
brane/config/formats/: basic.yaml  core.yaml
brane/config/objects/: basic.yaml  core.yaml
brane/core/: __init__.py  base.py  event.py  extension.py  factory.py  format.py  hook.py  iomanager.py  mapper.py  module.py  object.py  utils.py  xio.py
brane/libs/: events.py  extensions.py  formats.py  hooks.py  modules.py  objects.py
brane/libs/hooks/: core.py  image.py
config/formats/: basic.yaml  core.yaml
config/modules/: basic.yaml  core.yaml
config/objects/: basic.yaml  core.yaml
dev/: IOManager_main_working.ipynb  assets  brane  core  libs  テスト駆動開発.ipynb
docs/: run.sh
docs/source/: conf.py  index.rst  modules.rst
docs/source/api/: brane.core.rst  brane.libs.rst  brane.rst
docs/source/introduction/: introduction.md
examples/: .gitignore  README.md  modules.html  package_overview_tour.html  package_overview_tour.ipynb
examples/00_overview/: .gitignore  package_overview_tour.ipynb
introduction/: introduction.html
tests/: テスト駆動開発.ipynb
tests/core/: test_text.py  utils.py
tests/utils/: pillow.py
