# --- setup ---

[metadata]
name = brane
version = bleeding-edge
url = https://nrakwtnb.github.io/brane/
author = Noriaki Watanabe
author_email = noriaki.mathphys+brane-py@gmail.com
license = Apache License 2.0


[options]
python_requires = >=3.7.2
packages = find:

install_requires =
    PyYAML>=5.1 # used to load config files in yaml format
    typing-extensions; python_version<'3.9'

[options.extras_require]
gcs =
    gcsfs
    google-cloud-storage
s3 =
    s3fs
    boto3

[options.entry_points]


# --- formatter & linter ---

# setting on isort -> pyproject.toml
# setting on black -> pyproject.toml

[flake8]
ignore = E262, F405, W503
# E262 inline comment should start with '# '
# F405
# W503 line break before binary operator
max-line-length = 119


# --- test ---


[mypy]
python_version = 3.9

