# --- setup ---

[metadata]
name = brane
# bleeding-edge stage
version = 0.0.dev0
url = https://nrakwtnb.github.io/brane/
author = Noriaki Watanabe
author_email = noriaki.mathphys+brane-py@gmail.com
license = Apache License 2.0
long_description = file: README.md


[options]
python_requires = >=3.7.2
packages = find:

install_requires =
    # used to load config files in yaml format
    PyYAML>=5.1
    typing-extensions; python_version<'3.9'

[options.extras_require]
gcs =
    gcsfs
    google-cloud-storage
s3 =
    s3fs
    boto3

[options.entry_points]


# --- formatter & linter ---

# setting on isort -> pyproject.toml
# setting on black -> pyproject.toml

[flake8]
ignore = E262, F405, W503
# E262 inline comment should start with '# '
# F405
# W503 line break before binary operator
max-line-length = 119


# --- test ---


[mypy]
python_version = 3.9

