# --- setup ---

[metadata]
name = brane
# bleeding-edge stage
version = 0.0.dev1
url = https://nrakwtnb.github.io/brane/
author = Noriaki Watanabe
author_email = noriaki.mathphys+brane-py@gmail.com
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown

keywords = I/O management, I/O hook
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Software Development


[options]
python_requires = >=3.7.2
include_package_data = true
packages = find:

install_requires =
    # used to load config files in yaml format and 5.1 comes from the release time when python 3.7.2 is lanuched
    PyYAML>=5.1
    # used to upload / download files from remote storages and this version restriction comes from the first one after the 0.x ends and the fact they support python 3.7 - 3.9
    fsspec>=2021.4.0
    typing-extensions; python_version<'3.9'


[options.package_data]
#brane =
#    brane/config/**/*.yaml


[options.extras_require]
gcs =
    gcsfs
s3 =
    s3fs


[options.entry_points]


# --- formatter & linter ---

# setting on isort -> pyproject.toml
# setting on black -> pyproject.toml

[flake8]
ignore = E262, F405, W503
# E262 inline comment should start with '# '
# F405 name may be undefined, or defined from star imports: module
# W503 line break before binary operator
max-line-length = 119
max-complexity=10


# --- test ---


[mypy]
python_version = 3.9

